cargo-workspaces/tests/snapshots/exec__normal_ignore-2.snap
---
source: tests/exec.rs
assertion_line: 29
expression: out

---
[package]
name = "dep1"
version = "0.1.0"

edition = "2018"

[dependencies]

